load da galeria com xml

--- a/produto-det.html
+++ b/produto-det.html
@@ -14,11 +14,12 @@
         <div class="modal-content">
             
             <div class="modal-header">
-                <h4 class="modal-title"></h4>
+                <h4 class="modal-title">
+                    <!-- ajax -->
+                </h4>
             </div>
             <div class="modal-body">
-                <!---->
-                
+                <!-- ajax -->                
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
